# OpenGL-PlayGround

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  Makefile  OpenGL.make  imgui.ini  premake5.lua
lib/: assimp-vc142-mtd.lib
res/models/donut/: donut.mtl
res/shaders/: AdvancedGLSL-Blue.shader  AdvancedGLSL-Green.shader  AdvancedGLSL-Red.shader  AdvancedGLSL-Yellow.shader  Basic.shader  Flashy.shader  FlatColor.shader  OGLBookBlending.shader  OGLBookDepthTesting.shader  OGLBookDepthTesting2.shader  OGLBookLightCube.shader  OGLBookModelLoading.shader  OGLBookPointShader.shader  OGLBookScreen.shader  OGLBookShader.shader  OGLBookSkyBox.shader  OGLBookSkyboxContainer.shader  OGLBookStencil.shader  OGLBookStencilSingleColor.shader
src/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlatformDetection.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  defines.h  main.cpp
src/tests/: Test.cpp  Test.h  TestAdvancedGLSL.cpp  TestAdvancedGLSL.h  TestBlend.cpp  TestBlend.h  TestClearColor.cpp  TestClearColor.h  TestCube3D.cpp  TestCube3D.h  TestCubemap.cpp  TestCubemap.h  TestCulling.cpp  TestCulling.h  TestDepth.cpp  TestDepth.h  TestEnvironmentMapping.cpp  TestEnvironmentMapping.h  TestFramebuffer.cpp  TestFramebuffer.h  TestModel.cpp  TestModel.h  TestPointLight3D.cpp  TestPointLight3D.h  TestStencil.cpp  TestStencil.h  TestTexture2D.cpp  TestTexture2D.h  TestTriangle2D.cpp  TestTriangle2D.h
